@@ -1,0 +1,5 @@
+import CoordinatesMutation from "./CoordinatesMutation";
+
+export default {
+  ...CoordinatesMutation,
+};
